--- a/StudentAdmissionMVC/.settings/org.eclipse.core.resources.prefs
+++ b/StudentAdmissionMVC/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//WebContent/WEB-INF/AdmissionComplete.jsp=UTF-8
 encoding//WebContent/WEB-INF/AdmissionForm.jsp=UTF-8
+encoding//WebContent/WEB-INF/ExamplePage.jsp=UTF-8
 encoding//WebContent/WEB-INF/messages_de.properties=UTF-8
 encoding//WebContent/WEB-INF/messages_en.properties=UTF-8
 encoding//WebContent/WEB-INF/messages_tr.properties=UTF-8
