--- a/StudentAdmissionMVC/.project
+++ b/StudentAdmissionMVC/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>StudentAdmissionMVC</name>
+	<name>EnrollmentSystem</name>
 	<comment></comment>
 	<projects>
 	</projects>
